typed-i18n/tests/compile-fail/invalid_input_type.stderr
error: invalid input type: 5+5
 --> tests/compile-fail/invalid_input_type.rs:5:32
  |
5 | #[typed_i18n(builder = "bool", input = "5+5")]
  |                                ^^^^^
